<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="94dp">

        <Button
            android:id="@+id/discover_btn_scan"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/discov_btn_start_scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/discover_chbx_only_my_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="52dp"
            android:text="@string/discov_txtv_only_my_devices"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/discover_chbx_log_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="165dp"
            android:layout_marginTop="52dp"
            android:text="@string/localiz_txtv_log_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/discover_et_log_flag"
            android:layout_width="87dp"
            android:layout_height="43dp"
            android:layout_marginStart="268dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:width="55dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/discover_btn_scan"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <!-- Table headers -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="0dp">

        <TextView
            android:layout_width="177dp"
            android:layout_height="match_parent"
            android:text="Mac address"
            android:textAlignment="textStart"
            android:paddingLeft="20dp"
            android:textColor="#000000"
            android:textSize="14dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="RSSI"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="14dp" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:text="Additional info"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="14dp" />

    </LinearLayout>

    <!-- List view container -->
    <ListView
        android:id="@+id/listview_discover_devices"
        android:layout_width="407dp"
        android:layout_height="532dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:divider="#000"></ListView>

</RelativeLayout>